...
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:background="?android:attr/selectableItemBackground">

    <ImageView
        android:id="@+id/album_cover_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/album_cover_description"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/album_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?attr/textAppearanceListItem"
...
